@@ -603,8 +603,8 @@ public:
 	void  BuyAA(AA_Action* action);
 	// solar: this function is used by some AA stuff
 	void MemorizeSpell(int32 slot,int32 spellid,int32 scribing);
-	void	SetAATitle(const char *txt) { strcpy(m_pp.title, txt); }
-	void	SetTitleSuffix(const char *txt) { strcpy(m_pp.suffix, txt); }
+	void	SetAATitle(const char *Title);
+	void	SetTitleSuffix(const char *txt);
 	inline int32	GetMaxAAXP(void) const { return max_AAXP; }
 	inline uint32  GetAAXP()   const { return m_pp.expAA; }
 	void SendAAStats();
