@@ -3,6 +3,9 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 
 ==06/18/2009==
 Derision: Fixed some flawed database queries and a few compile warnings.
+Derision: Added command #reloadtitles to reload titles from the database.
+Derision: Added second optional argument to #title and #titlesuffix to save the title to the database if 1.
+Derision: Added second optional argument to $client->SetAATitle/SetTitleSuffix to save the title to the database.
 
 ==06/17/2009==
 Derision: Removed redundant flymode on/off in water code (not needed since Rev161).
